# qapilot

./: .env.example  DEMO.md  GUIA_PRUEBA.md  README.md  TESTING_GUIDE.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  qapilot_improve.md
.github/workflows/: improve-bug.yml  improve-issue-on-creation.yml  improve-story.yml  issue-improve-ollama.yml  issue-improve.yml
app/: __init__.py  app_terminology.py  enhanced_template_engine.py  github_client.py  github_models_client.py  issue_improver.py  main_improve_issue.py  main_improve_issue_creation.py  main_improve_issue_ollama.py  ollama_client.py  template_engine.py
app/data/: enhanced_issue_templates.json  enhanced_issue_templates.json.backup  issue_templates.json
app/prompts/: improve_prompt.txt
plan/: qapilot-hackaton-a6bf86.md  qapilot-hackaton-en-a6bf86.md  qapilot-hackaton-es-a6bf86.md
tests/: test_issue_improver.py
